// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandListItem Snapshots All 1`] = `
<ul
  className="sc-eCssSg ioLhRl"
>
  <li
    className="sc-bdfBwQ jObMo"
  >
    <button
      aria-controls="test"
      aria-expanded={true}
      className="sc-dlfnbm bNYJiP"
      id="test2"
      onClick={[Function]}
    >
      test
       
      <svg
        className="sc-gsTCUz grCajF"
        height="7"
        viewBox="0 0 33 20"
        width="12"
      >
        <path
          d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
        />
      </svg>
    </button>
    <div
      aria-labelledby="test2"
      className="sc-hKgILt bvsZTo"
      id="test"
    >
      Du får umiddelbart svar på søknaden og kan se hvor mye du får i lån
    </div>
  </li>
  <li
    className="sc-bdfBwQ jObMo"
  >
    <button
      aria-controls="test"
      aria-expanded={true}
      className="sc-dlfnbm bNYJiP"
      id="test2"
      onClick={[Function]}
    >
      test
       
      <svg
        className="sc-gsTCUz grCajF"
        height="7"
        viewBox="0 0 33 20"
        width="12"
      >
        <path
          d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
        />
      </svg>
    </button>
    <div
      aria-labelledby="test2"
      className="sc-hKgILt bvsZTo"
      id="test"
    >
      Normalt vil du ha pengene på din konto i annen bank en til to virkedager etter vi har mottatt søknad og godkjent all dokumentasjon. Om du ønsker utbetaling på dagen kontakter du vårt kundesenter.
    </div>
  </li>
</ul>
`;

exports[`ExpandListItem Snapshots No props 1`] = `
<ul
  className="sc-eCssSg ioLhRl"
>
  <li
    className="sc-bdfBwQ jObMo"
  >
    <button
      aria-expanded={false}
      className="sc-dlfnbm dWYOJZ"
      id="undefined2"
      onClick={[Function]}
    >
       
      <svg
        className="sc-gsTCUz jHLzIe"
        height="7"
        viewBox="0 0 33 20"
        width="12"
      >
        <path
          d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
        />
      </svg>
    </button>
  </li>
  <li
    className="sc-bdfBwQ jObMo"
  >
    <button
      aria-expanded={false}
      className="sc-dlfnbm dWYOJZ"
      id="undefined2"
      onClick={[Function]}
    >
       
      <svg
        className="sc-gsTCUz jHLzIe"
        height="7"
        viewBox="0 0 33 20"
        width="12"
      >
        <path
          d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
        />
      </svg>
    </button>
  </li>
</ul>
`;

exports[`ExpandListItem Snapshots Title 1`] = `
<ul
  className="sc-eCssSg ioLhRl"
>
  <li
    className="sc-bdfBwQ jObMo"
  >
    <button
      aria-controls="Hvor lang tid tar det før jeg får svar på søknaden?"
      aria-expanded={false}
      className="sc-dlfnbm dWYOJZ"
      id="Hvor lang tid tar det før jeg får svar på søknaden?2"
      onClick={[Function]}
    >
      Hvor lang tid tar det før jeg får svar på søknaden?
       
      <svg
        className="sc-gsTCUz jHLzIe"
        height="7"
        viewBox="0 0 33 20"
        width="12"
      >
        <path
          d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
        />
      </svg>
    </button>
  </li>
  <li
    className="sc-bdfBwQ jObMo"
  >
    <button
      aria-controls="Hvor lang tid tar det før lånet blir utbetalt?"
      aria-expanded={false}
      className="sc-dlfnbm dWYOJZ"
      id="Hvor lang tid tar det før lånet blir utbetalt?2"
      onClick={[Function]}
    >
      Hvor lang tid tar det før lånet blir utbetalt?
       
      <svg
        className="sc-gsTCUz jHLzIe"
        height="7"
        viewBox="0 0 33 20"
        width="12"
      >
        <path
          d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
        />
      </svg>
    </button>
  </li>
</ul>
`;

exports[`ExpandListItem Snapshots expanded 1`] = `
<ul
  className="sc-eCssSg ioLhRl"
>
  <li
    className="sc-bdfBwQ jObMo"
  >
    <button
      aria-expanded={true}
      className="sc-dlfnbm bNYJiP"
      id="undefined2"
      onClick={[Function]}
    >
       
      <svg
        className="sc-gsTCUz grCajF"
        height="7"
        viewBox="0 0 33 20"
        width="12"
      >
        <path
          d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
        />
      </svg>
    </button>
    <div
      aria-labelledby="undefined2"
      className="sc-hKgILt jXHHpt"
    >
      Du får umiddelbart svar på søknaden og kan se hvor mye du får i lån
    </div>
  </li>
  <li
    className="sc-bdfBwQ jObMo"
  >
    <button
      aria-expanded={true}
      className="sc-dlfnbm bNYJiP"
      id="undefined2"
      onClick={[Function]}
    >
       
      <svg
        className="sc-gsTCUz grCajF"
        height="7"
        viewBox="0 0 33 20"
        width="12"
      >
        <path
          d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
        />
      </svg>
    </button>
    <div
      aria-labelledby="undefined2"
      className="sc-hKgILt jXHHpt"
    >
      Normalt vil du ha pengene på din konto i annen bank en til to virkedager etter vi har mottatt søknad og godkjent all dokumentasjon. Om du ønsker utbetaling på dagen kontakter du vårt kundesenter.
    </div>
  </li>
</ul>
`;

exports[`ExpandListItem Snapshots flush 1`] = `
<ul
  className="sc-eCssSg ioLhRl"
>
  <li
    className="sc-bdfBwQ jObMo"
  >
    <button
      aria-expanded={false}
      className="sc-dlfnbm dWYOJZ"
      id="undefined2"
      onClick={[Function]}
    >
       
      <svg
        className="sc-gsTCUz jHLzIe"
        height="7"
        viewBox="0 0 33 20"
        width="12"
      >
        <path
          d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
        />
      </svg>
    </button>
  </li>
  <li
    className="sc-bdfBwQ jObMo"
  >
    <button
      aria-expanded={false}
      className="sc-dlfnbm dWYOJZ"
      id="undefined2"
      onClick={[Function]}
    >
       
      <svg
        className="sc-gsTCUz jHLzIe"
        height="7"
        viewBox="0 0 33 20"
        width="12"
      >
        <path
          d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
        />
      </svg>
    </button>
  </li>
</ul>
`;
